webroot/rsrc/css/application/people/people-profile.css
/**
 * @provides people-profile-css
 */

form.profile-image-form {
  display: inline-block;
  margin: 0 8px 8px 0;
}

button.profile-image-button {
  padding: 4px;
  margin: 0;
}

.compose-dialog button.profile-image-button-selected {
  background-image: none;
  background-color: {$lightblue};
  border-color: {$sky};
}

.compose-header {
  color: {$bluetext};
  border-bottom: 1px solid {$lightblueborder};
  padding: 4px 0;
  margin: 0 0 8px;
}

form.compose-dialog {
  width: 80%;
}

.compose-dialog .phui-icon-view {
  display: block;
  position: relative;
  width: 48px;
  height: 48px;
  background-color: {$darkgreytext};
}

.compose-dialog .compose-icon-bg.phui-icon-view {
  color: #e7e7e7;
  line-height: 48px;
  width: 48px;
  text-align: center;
  font-size: 28px;
}

.compose-dialog .compose-background-red {
  background-color: {$red};
}

.compose-dialog .compose-background-orange {
  background-color: {$orange};
}

.compose-dialog .compose-background-yellow {
  background-color: {$yellow};
}

.compose-dialog .compose-background-green {
  background-color: {$green};
}

.compose-dialog .compose-background-blue {
  background-color: {$blue};
}

.compose-dialog .compose-background-sky {
  background-color: {$sky};
}

.compose-dialog .compose-background-indigo {
  background-color: {$indigo};
}

.compose-dialog .compose-background-violet {
  background-color: {$violet};
}

.compose-dialog .compose-background-pink {
  background-color: {$pink};
}

.compose-dialog .compose-background-charcoal {
  background-color: {$charcoal};
}

.compose-dialog .compose-background-backdrop {
  background-color: {$backdrop};
}

